--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "silex/silex": "^2.0",
         "phpunit/phpunit": "^6.0",
-        "abraham/twitteroauth": "^0.7.2"
+        "abraham/twitteroauth": "^0.7.2",
+        "symfony/finder": "^3.2"
     },
     "autoload": {
         "psr-4": {
